--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name = 'viewport' content="width=device-width, initial-scale = 1.0">
       <meta name = 'keywords' content="HTML, CSS">
-      <link rel="stylesheet" href="yus.css"/>
+      <link rel="stylesheet" href="index.css"/>
       <script src="script.js"></script>
       <meta name="description" content="...">
       <script src="https://kit.fontawesome.com/3357d6b109.js" crossorigin="anonymous"></script>
