--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <meta name="description" content="...">
       <script src="https://kit.fontawesome.com/3357d6b109.js" crossorigin="anonymous"></script>
     <title>Aukai</title>
+    <link rel="icon" href="aukai.png" type="image/x-icon">
     <body>
                             
         <div class="container">
