--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="navbar">
                 <img src="aukai.png" alt="a" id="auk">
-                <h3 class="name">Aukai!</h3>
+                <h3 class="name">Aukai</h3>
                 <nav>
                     <ul id="menulist">
                         <a href=""><li>Home</li></a>
